# vcard_util

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yaml
vcard_util/: __init__.py  objects.py
